fix: typescript errors

--- a/tracer/package.json
+++ b/tracer/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "logs and auditlog application",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
@@ -20,7 +21,8 @@
   "homepage": "https://github.com/freit4sdev/ds#readme",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.19.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
